# tetris

./: CMakeLists.txt  main.cpp  projekt2vs15.vcxproj  save.txt  score.txt
Debug/: main.obj.enc  projekt2vs15.exp  projekt2vs15.ilk  projekt2vs15.lib  save.txt  score.txt  vc140.idb
Debug/Tetris 2015/: save.txt  score.txt
Debug/projekt2vs10.tlog/: CL.read.1.tlog  CL.write.1.tlog  projekt2vs10.lastbuildstate
Debug/projekt2vs13.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog
Debug/projekt2vs15.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  projekt2vs15.lastbuildstate  projekt2vs15.write.1u.tlog
